# pennoa

./: BRAND.md  README.md  brand.html  index.html  overlay.html  package-lock.json  package.json  prd.md  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
landing/: index.html  script.js  styles.css
src/: main.ts  overlay.ts  plane.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accessibility.rs  commands.rs  lib.rs  main.rs  model.rs  overlay.rs  scheduler.rs  settings.rs  store.rs  tray.rs
src/styles/: app.css  fonts.css  overlay.css
