[package]
name = "pennoa"
version = "0.1.0"
description = "Meeting reminders that respect your flow."
authors = ["Pennoa contributors"]
edition = "2021"

[lib]
name = "pennoa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
panic = "abort"
